--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@types/react": "^16.8.2",
-    "@types/react-dom": "^16.8.0",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "@types/react": "16.8.2",
+    "@types/react-dom": "16.8.0",
+    "debug": "4.3.2",
+    "react": "16.8.0",
+    "react-dom": "16.8.0",
+    "react-router-dom": "^5.2.0",
+    "uuid": "8.3.2"
   },
   "scripts": {
     "start": "react-scripts-ts start",
