--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "debug": "4.3.2",
     "react": "16.8.0",
     "react-dom": "16.8.0",
-    "react-router-dom": "^5.2.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "5.2.0",
     "uuid": "8.3.2"
   },
   "scripts": {
